# Facial-Recognition-System

./: CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
DB/: 111131.txt  111233.txt  111332.txt  111522.txt  164835.txt  164840.txt  FaceNames.txt
examples/: FaceDB.cpp  FaceDetector.cpp  FaceRecogniser_Image.cpp  FaceRecognizer_Camera.cpp  FaceRecognizer_Video.cpp  somefk.cpp
headers/: FaceDB.hpp  FaceDetector.hpp  FaceRecognizer.hpp
